# bazel-learning

./: .bazelrc  .gitignore  BUILD.bazel  README.md  TODO.md  WORKSPACE  example_deps.bzl  paket.dependencies  update_deps.sh
example/csharp/console/: BUILD  BUILD.bazel
example/proto/: BUILD  BUILD.bazel
