load(
    "@rules_dotnet//dotnet:defs.bzl",
    "csharp_binary",
)

csharp_binary(
    target_frameworks = ["net6.0"],
    targeting_packs = [
        "@example_deps//microsoft.netcore.app.ref",
    ],
    name = "console.exe",
    srcs = [
        "Program.cs",
    ],
    deps = [
        "//example/proto:thing_csharp_proto.dll",
    ]
)
